<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smashwords Access</string>
    <string name="Main_Activity_Book_Recommendation">Book recommendation</string>
    <string name="MainActivity_About_Title">About Smashwords Access</string>
    <string name="MainActivity_About_Text">Smashwords Access is developed by <a href="http://www.unleashyouradventure.com">UnleashourAdventure</a>,
        an independent ebook publisher for inspiring travel tales.</string>
    <string name="Main_Activity_Item_Library">your library</string>
    <string name="Main_Activity_Item_Search">search</string>
    <string name="Main_Activity_Item_ByCategory">categories</string>
    <string name="Main_Activity_Item_Preferences">preferences</string>
    <string name="Main_Activity_Item_Readers">readers</string>
    <string name="Main_Activity_Item_about">about</string>
    <string name="Preferences.email.dialogMessage">Please enter a valid email address</string>
    <string name="Preferences.email.dialogTitle">email address</string>
    <string name="Preferences_title">{appTitle} settings</string>

    <string name="SmashwordsAPIHelper_Result_IOException">Could not connect to Smashwords in order to log in</string>
    <string name="SmashwordsAPIHelper_Result_success">Successfully logged in into Smashwords</string>
    <string name="SmashwordsAPIHelper_Result_failed">Could not log in to Smashwords, please check your user name and password</string>
    <string name="AppRater_Text">If you enjoy using {appTitle}, please take a moment to rate it.\nIf you have any problems or suggestion please click on "Houston I have a problem" and we will try to help you.\nThanks for your using {appTitle}!</string>
    <string name="BookActivity_loading">loading description…</string>
    <string name="BookActivity_ImageOfBook">Image of book</string>
    <string name="BookActivity_buy_book">Buy Book</string>
    <string name="BookActivity_download_book_sample">Download Book Sample</string>
    <string name="Main_Activity_Item_help">help</string>
    <string name="BookActivity_series">Search for other books in this series</string>
    <string name="BookActivity_check_internet">Please check your Internet connection.</string>
    <string name="BookActivity_no_ebook_readers_found">No ebook readers found\n» download one</string>
    <string name="BookActivity_author">Find other books by this author</string>
    <string name="BookActivity_by">by</string>
    <string name="BookActivity_loadingbook">Loading book</string>
    <string name="BookListActivity_options">Options</string>
    <string name="BookActivity_price">Price</string>
    <string name="BookActivity_pick_reader_app">Pick a reader app</string>
    <string name="BookActivity_downloading_book">Downloading Book</string>
    <string name="BookActivity_share">Share</string>
    <string name="AppRater_Rate">Rate</string>
    <string name="AppRater_Help">Houston I have a problem</string>
    <string name="AppRater_Problem">Problem with {appTitle}</string>
    <string name="AppRater_Describe_Problem">Please describe your problem here</string>
    <string name="App_Rater_Remins_me_later">Remind me later</string>
    <string name="AppRater_Remind_me_later">Remind me later</string>
    <string name="AppRater_no_thank_you">No, thank you!</string>
    <string name="Preferences.email.dialogDescription">Used to access your Smashwords libary. Leave blank to disable Smashwords support.</string>
</resources>