<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bookScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:paddingRight="8dp">
        <ImageView          
            android:id="@+id/bookDetailImage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/BookActivity_ImageOfBook"

             />

        <TextView
            android:id="@+id/bookDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        <TextView
            android:id="@+id/bookAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <ProgressBar
            android:id="@+id/bookLoadProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        
        <Button
            android:id="@+id/bookButtonBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BookActivity_buy_book"
            android:visibility="invisible" />

        <Button
            android:id="@+id/bookButtonDownloadSample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BookActivity_download_book_sample"
            android:visibility="invisible" />
        
        <Button
            android:id="@+id/bookButtonDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Download Book"
            android:visibility="invisible" />
        <Button
            android:id="@+id/bookButtonShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Share Book Link"
             />
        <Button
            android:id="@+id/bookSeries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BookActivity_series"
            />
        <RatingBar
            android:id="@+id/bookRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="0.01"
            android:visibility="invisible"
            />
        <TextView
            android:id="@+id/bookDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:text="@string/BookActivity_loading"
/>
        
    </LinearLayout>

</ScrollView>